--- a/_config.yml
+++ b/_config.yml
@@ -1,33 +1,30 @@
 # Site settings
-title: Jekyll-materialize
-description: > # this means to ignore newlines until "baseurl:"
-    Write an awesome description for your new site here. You can edit this
-    line in _config.yml. It will appear in your document head meta (for
-    Google search results) and in your feed.xml site description.
-url: "http://yourdomain.com"
+title: UA Party
+description: UA Party nace con la intención de conectar a toda la comunidad de la Universidad de Alicante en el ámbito de salir de fiesta y ofrecerte toda la información de cada una de las fiestas que se organizan.
+url: "http://uaparty.ml"
 baseurl: ""
-logo: jekyll-<b>materialize</b>
-paginate: 5
+logo: UA<b>Party</b>
+paginate: 8
 paginate_path: "/page:num/"
 owner:
-    email: ichihara.rifa@gmail.com
+    email: uapartyoficial@gmail.com
     facebook:
         show: true
-        name: "Ichihara Rifa"
-        url: "https://fb.me/nasya.aidan"
+        name: "uapartyoficial"
+        url: "https://fb.me/uapartyoficial"
     github:
-        show: true
+        show: false
         username: "riefachan"
     twitter:
-        show: false
-        username: ""
+        show: true
+        username: "uapartyoficial"
     disqus:
         show: true
-        username: "ichihararifa"
+        username: "uaparty"
 sass:
     sass_dir: _sass
     style: compressed
-permalink: "/article/:title"
+permalink: "/novedades/:title/"
 markdown: redcarpet
 highlighter: pygments
 gems: [jekyll-feed, jekyll-paginate]
