Bares initial commit (with bad column system)

--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,9 @@ collections:
   cocktails:
     output: true
     permalink: /cocteles/:title/
+  bares:
+    output: true
+    permalink: /bares/:title/
 markdown: redcarpet
 highlighter: pygments
 gems: [jekyll-feed, jekyll-paginate]
